src/assets/scss/_global.scss
html {
  overflow-y: scroll;
}

body {
  font-weight: 200;
  background-color: $gray-200;
  background-image: url("/static/stardust.png");
  .container-fluid {
    background-color: lighten($primary, 65%);
    min-height: 90vh;
  }
}

@include media-breakpoint-up(md) {
  .container-fluid {
    width: 75%;
    margin: 2rem auto;
  }
}

.category-title {
  font-family: $font-family-jura;
  color: $gray-500;
}

.modal-title {
  font-family: $font-family-lobster;
}

